# BTFL-Launcherv2

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json
scripts/: build_and_run.sh
sdk/wxShapeFramework/: CMakeLists.txt
sdk/wxShapeFramework/include/wx/wxsf/: BitmapShape.h  SFEvents.h
sdk/wxShapeFramework/src/: BitmapShape.cpp  SFEvents.cpp
src/: btfl_launcher.cpp  btfl_launcher.hpp
src/components/: component.divider.cpp  component.divider.hpp  component.footer_main.cpp  component.footer_main.hpp  component.read_only_rtc.cpp  component.read_only_rtc.hpp  component.read_only_rtc_watcher.cpp  component.read_only_rtc_watcher.hpp  component.social_container.cpp  component.social_container.hpp
src/controllers/: controller.app_main.cpp  controller.app_main.hpp  controller.footer_main.cpp  controller.footer_main.hpp  controller.left_sidebar.cpp  controller.left_sidebar.hpp
src/elements/: element.icon_button.cpp  element.icon_button.hpp  element.static_text_watcher.cpp  element.static_text_watcher.hpp  element.text_button.cpp  element.text_button.hpp
src/frames/: frame.app_main.cpp  frame.app_main.hpp
src/managers/: manager.asset.cpp  manager.asset.hpp  manager.screen.cpp  manager.screen.hpp
src/models/: model.asset.hpp  model.screen.hpp  model.social_media.hpp
src/screens/: screen.launcher_main.cpp  screen.launcher_main.hpp  screen.launcher_secondary.cpp  screen.launcher_secondary.hpp
src/shapes/: shape.action_button.cpp  shape.action_button.hpp  shape.back_button.hpp  shape.bitmap_watcher.cpp  shape.bitmap_watcher.hpp  shape.header_secondary.hpp  shape.ids.hpp  shape.iso_info.cpp  shape.iso_info.hpp  shape.pinner.cpp  shape.pinner.hpp  shape.text_watcher.cpp  shape.text_watcher.hpp
src/strings/: strings.hpp
src/style/: style.color.hpp  style.spacing.hpp
src/utils/: background_image_canvas.cpp  background_image_canvas.hpp  colour.hpp  crypto.hpp
src/view_models/: view_model.home.hpp  view_model.left_sidebar.cpp  (+1 more)
(+5 files in other folders)
